<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="iszdry">是</string>
     
  <string name="autologin_isok">开启自动登录</string>
    <string name="autologin_isno">关闭自动登录</string>
    <string name="hello">Hello World, MOA!</string>
    <string name="app_name">信息管理系统</string>
    <string name="result_text">result_text</string>
    <string name="btnLogin">登陆</string>
    <string name="btnClose">关闭</string>
    <string name="hintUserName">请输入用户名</string>
    <string name="hintPassword">请输入码密码</string>
    <string name="btnReg">注册</string>
    <string name="cbRemember">记住密码</string>
    <string name="cbAutoLoad">自动登陆</string>
    <string name="tvPwd">密　码</string>
    <string name="tvUid">用户名</string>
    <string name="FunctionTabActivity">FunctionTabActivity</string>
    <string name="tvPwd2">确认密码：</string>
    <string name="main_home">首页</string>
    <string name="menu_search">综合办公</string>
    <string name="more">更多</string>
    <string name="main_my_info">公文管理</string>
    <string name="main_news">个人事宜</string>
    <string name="tvEmail">邮箱：</string>
    <string name="tvTitle">标题：</string>
    <string name="btnBack">返回</string>
    <string name="btnOk">确定</string>
    <string name="btnSearch">搜索</string>
    <string name="btnDelete">删除</string>
    <string name="btnEdit">编辑</string>
    <string name="sdqb">待办事宜</string>
    <string name="ggtz">公告通知</string>
    <string name="yjsb">发文管理</string>
    <string name="jjgl">个人邮箱</string>
    <string name="zcfg">最新消息</string>
    <string name="txl">通信录</string>
    <string name="btnDoSubmit">提交</string>
    <string name="btnDoDispose">处理</string>
    <string name="btnDoWorkflowLog">流程记录</string>
    <string name="btnDoMaintext">正文信息</string>
    <string name="ybsy">已办事宜</string>
    <string name="lodingText">欢迎进入信息管理系统</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="title_activity_shi_jian_shang_bao">ShiJianShangBaoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_wglog_edit">WglogEditActivity</string>
    <string name="title_activity_notice">公告通知</string>

</resources>