<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wallpaper_a_p"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <!-- 声明垂直分布的线性布局 -->

    <LinearLayout
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_loading"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="250dip"
        android:layout_marginTop="10dip"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:background="@drawable/denglu"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:paddingTop="5dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/tvUid" />

            <EditText
                android:id="@+id/etUid"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_9patcheditbox"
                android:hint="@string/hintUserName"
                android:inputType="text"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/tvPwd" />

            <EditText
                android:id="@+id/etPwd"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_9patcheditbox"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <CheckBox
                android:id="@+id/cbRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/bg_checkbox"
                android:checked="false"
                android:text="@string/cbRemember"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/cbAutoLoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/bg_checkbox"
                android:checked="false"
                android:text="@string/cbAutoLoad"
                android:textColor="@color/white" />
        </LinearLayout>
        <!-- 声明于显示按钮的线性布局 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <!--
            <ImageButton
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/loginbt" >
            </ImageButton>

            <ImageButton
                android:id="@+id/btnReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:background="@drawable/exitbt" >
            </ImageButton>
            -->

            <Button
                android:id="@+id/btnReg"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_style_white"
                android:text="@string/btnClose" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_style_green"
                android:text="@string/btnLogin"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>